--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
     "authors": [
         {
             "name": "Jordan Price",
-            "email": "jordan@bestie.ai"
+            "email": "jordan@example.com"
         }
     ],
     "require": {
         "php": "^8.1",
         "fakerphp/faker": "^1.9.1",
-        "illuminate/support": "^9.0|^10.0"
+        "illuminate/support": "^9.0|^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "orchestra/testbench": "^8.0",
