Prepare package for Packagist

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Jordan Price",
-            "email": "jordan@example.com"
+            "email": "jordanprice@github.com"
         }
     ],
     "require": {
